--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.svg" />
-    <link rel="stylesheet" href="/umi.1757c8a3.css" />
+    <link rel="stylesheet" href="./umi.1757c8a3.css" />
     <script>
       window.routerBase = "/";
     </script>
     <script>
       //! umi version: 3.5.41
     </script>
-    <script src="/d3.min.js" defer="true"></script>
+    <script src="./d3.min.js" defer="true"></script>
   </head>
   <body>
     <div id="root"></div>
 
-    <script src="/umi.f2feeb1f.js"></script>
+    <script src="./umi.c34afa96.js"></script>
   </body>
 </html>
